# recipe-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: settings.py
