[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["Adrian Gonzzález <adriancamilo.gg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<=3.2.13,<3.3"
djangorestframework = ">=3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
